# bazel-issue

./: BUILD.bazel  README.MD  WORKSPACE.bazel
projects/appA/: BUILD.bazel  main.py
projects/libA/: BUILD.bazel  mylib copy.py  mylib.py
projects/py-localdev-init/: BUILD.bazel  generate_init_script.py
